Bug 127003 - Calc: Page Formatting: Header & Footer: cant insert field into proper position
Summary: Calc: Page Formatting: Header & Footer: cant insert field into proper position
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
6.3.0.0.alpha1+
Hardware: All Linux (All)
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:6.4.0 target:6.3.2
Keywords: bibisected, bisected, regression
Depends on:
Blocks: GTK3
  Show dependency treegraph
 
Reported: 2019-08-18 05:01 UTC by Kiyotaka Nishibori
Modified: 2019-08-20 08:44 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Kiyotaka Nishibori 2019-08-18 05:01:16 UTC
Description:
can't insert any field into proper position on Header dialog for Calc: Format > Pages > Header.
it seems that this is related with https://bugs.documentfoundation.org/show_bug.cgi?id=127002.

Steps to Reproduce:
1. Go to Format > Pages... > Header and click Edit button.
2. Select (none) on Header dropdown list.
3. move text cursor to Center area by mouse.
4. Click any Custom header button.


Actual Results:
a field is inserted in Left area.

Expected Results:
a field will be inserted in Center area.


Reproducible: Always


User Profile Reset: Yes



Additional Info:
this issue happens on:
  Version: 6.3.2.0.0+
  Build ID: 0df3e9fd645e9613c4a852b4a0966ff2eea7e313
  CPU threads: 8; OS: Linux 5.2; UI render: default; VCL: gtk3; 
  Locale: ja-JP (ja_JP.UTF-8); UI-Language: en-US
  Calc: CL
and
  Vesion: 6.3.0.4
  Build ID: 6.3.0-1 of Arch linux package
  CPU threads: 8; OS:Linux 5.2; UI render: default; VCL: gtk3; 
  Locale: ja-JP (ja_JP.UTF-8); UI-Language: ja-JP
  Calc: threaded

I remember that the issue hasn't happen on at least 6.1 family.
Comment 1 m_a_riosv 2019-08-18 13:59:19 UTC
I can't reproduce.
Version: 6.4.0.0.alpha0+ (x64)
Build ID: d3d13140f0036c53aa74820b41acfeffa3572168
CPU threads: 4; OS: Windows 10.0; UI render: GL; VCL: win; 
TinderBox: Win-x86_64@62-TDF, Branch:master, Time: 2019-08-14_12:05:15
Locale: es-ES (es_ES); UI-Language: en-US Calc: CL
Version: 6.3.1.0.0+ (x64)
Build ID: 60b6288bc1aec17d04b45f62ba6f117fc43f8ab4
CPU threads: 4; OS: Windows 10.0; UI render: GL; VCL: win; 
TinderBox: Win-x86_64@42, Branch:libreoffice-6-3, Time: 2019-08-04_12:12:28
Locale: es-ES (es_ES); UI-Language: en-US Calc: threaded
Comment 2 Xisco Faulí 2019-08-19 08:16:43 UTC
Reproduced in

Version: 6.4.0.0.alpha0+
Build ID: cbe9601e5972ec1c466311e0b148a9fbe8cda4d1
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

but not in

Version: 6.4.0.0.alpha0+
Build ID: cbe9601e5972ec1c466311e0b148a9fbe8cda4d1
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: x11; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

Thus, GTK3 only
Comment 3 Xisco Faulí 2019-08-19 08:23:34 UTC
Regression introduced by:

https://gerrit.libreoffice.org/plugins/gitiles/core/+/5fe6c3b432ceb79de49ca2ac5caae0b9f7e9bffd%5E!

commit 5fe6c3b432ceb79de49ca2ac5caae0b9f7e9bffd	[log]
author	Caolán McNamara <caolanm@redhat.com>	Wed Jun 26 21:00:02 2019 +0100
committer	Caolán McNamara <caolanm@redhat.com>	Thu Jun 27 09:58:18 2019 +0200
tree 745bfcc2ea76a1b708f8d1c10215aa7b33189e3a
parent 8e4814cfc4b77f0e796ecfeadabd33d84a362cbb [diff]

infinite focus changing in toc biblio page

Bisected with: bibisect-linux64-6.3

Adding Cc: to Caolán McNamara
Comment 4 Commit Notification 2019-08-19 10:40:44 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/ed8dc2fcf8faa90657d500ec3b5d06e1352d8e82%5E%21

Resolves: tdf#127003 explicit grab focus needs explicit link callback

It will be available in 6.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Caolán McNamara 2019-08-19 10:41:35 UTC
fixed in master, backport to 6-3 in gerrit
Comment 6 Xisco Faulí 2019-08-20 08:42:26 UTC
Verified in

Version: 6.4.0.0.alpha0+
Build ID: 686b3b5bfc8caac0d5db7c9845fafd32250281e2
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

@Caolán, thanks for fixing this issue!
Comment 7 Commit Notification 2019-08-20 08:44:07 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-6-3":

https://git.libreoffice.org/core/+/4e123492d8d63d04a1c215c17981f0149df2f634%5E%21

Resolves: tdf#127003 explicit grab focus needs explicit link callback

It will be available in 6.3.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.