Resolves: tdf#127003 explicit grab focus needs explicit link callback

Change-Id: I5131e5c49e7f7c2ef9bac8943420643ad8afef38